[gd_scene load_steps=30 format=2]

[ext_resource path="res://scripts/Opgave 1/Skrald 1.gd" type="Script" id=1]
[ext_resource path="res://scripts/Opgave 1/affald sortering opgave.gd" type="Script" id=2]
[ext_resource path="res://Grafik/opgaver/affaldsortering/plastic_bottle_ddu.png" type="Texture" id=3]
[ext_resource path="res://scripts/Opgave 1/Skrald 2.gd" type="Script" id=4]
[ext_resource path="res://Grafik/opgaver/affaldsortering/Banana_peel_ddu.png" type="Texture" id=5]
[ext_resource path="res://Grafik/opgaver/affaldsortering/skraldespand_bio_ddu.png" type="Texture" id=6]
[ext_resource path="res://Grafik/opgaver/affaldsortering/skraldespand_plastik_ddu.png" type="Texture" id=7]
[ext_resource path="res://Grafik/opgaver/affaldsortering/restaffald.png" type="Texture" id=8]
[ext_resource path="res://scripts/Opgave 1/Skrald 3.gd" type="Script" id=9]
[ext_resource path="res://Grafik/opgaver/affaldsortering/Skraldespand_restaffald_ddu.png" type="Texture" id=10]
[ext_resource path="res://scripts/Opgave 1/Skrald 4.gd" type="Script" id=11]
[ext_resource path="res://Grafik/opgaver/affaldsortering/bad_shirt_ddu.png" type="Texture" id=12]
[ext_resource path="res://Grafik/opgaver/affaldsortering/skraldespand_tekstil_ddu.png" type="Texture" id=13]
[ext_resource path="res://scripts/Opgave 1/Skrald 5.gd" type="Script" id=14]
[ext_resource path="res://Grafik/opgaver/affaldsortering/skraldespand_pap_ddu.png" type="Texture" id=15]
[ext_resource path="res://Grafik/opgaver/affaldsortering/Papkasse_ddu.png" type="Texture" id=16]
[ext_resource path="res://Grafik/opgaver/affaldsortering/Minigame_lokale_ddu.png" type="Texture" id=17]
[ext_resource path="res://times.ttf" type="DynamicFontData" id=18]

[sub_resource type="Theme" id=3]

[sub_resource type="CapsuleShape2D" id=4]
radius = 51.1009
height = 101.248

[sub_resource type="CapsuleShape2D" id=5]
radius = 44.9539
height = 107.782

[sub_resource type="CapsuleShape2D" id=6]
radius = 46.0
height = 116.0

[sub_resource type="CapsuleShape2D" id=7]
radius = 42.6666
height = 118.667

[sub_resource type="CapsuleShape2D" id=8]
radius = 37.3333
height = 134.667

[sub_resource type="CapsuleShape2D" id=9]
radius = 74.0
height = 0.0

[sub_resource type="DynamicFont" id=10]
size = 75
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=11]
size = 33
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=12]
size = 60
font_data = ExtResource( 18 )

[sub_resource type="DynamicFont" id=13]
size = 60
font_data = ExtResource( 18 )

[node name="affald sortering" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = 3.0
margin_right = -1.0
margin_bottom = 3.0
rect_scale = Vector2( 1.9, 1.9 )
theme = SubResource( 3 )
script = ExtResource( 2 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( -50, -500 )
current = true
zoom = Vector2( 4.35, 4.35 )
limit_left = -288
limit_top = -1303

[node name="Spand" type="Control" parent="."]
margin_right = 28.0
margin_bottom = 21.0

[node name="bio affald" type="Sprite" parent="Spand"]
position = Vector2( 649, 435 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_group_": true
}

[node name="Spand1" type="Area2D" parent="Spand/bio affald"]

[node name="Spand1" type="CollisionShape2D" parent="Spand/bio affald/Spand1"]
position = Vector2( -2.32278, 56.3914 )
shape = SubResource( 4 )

[node name="Plastic affald" type="Sprite" parent="Spand"]
position = Vector2( 1484, 432 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_group_": true
}

[node name="Spand2" type="Area2D" parent="Spand/Plastic affald"]

[node name="Spand 2" type="CollisionShape2D" parent="Spand/Plastic affald/Spand2"]
position = Vector2( -0.220154, 56.1469 )
shape = SubResource( 5 )

[node name="SkraldespandRestaffaldDdu" type="Sprite" parent="Spand"]
position = Vector2( 1945, 429 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 10 )
__meta__ = {
"_edit_group_": true
}

[node name="Spand 3" type="Area2D" parent="Spand/SkraldespandRestaffaldDdu"]

[node name="Spand 3" type="CollisionShape2D" parent="Spand/SkraldespandRestaffaldDdu/Spand 3"]
position = Vector2( -0.666748, 52 )
shape = SubResource( 6 )

[node name="SkraldespandTekstilDdu" type="Sprite" parent="Spand"]
position = Vector2( 169, 431 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 13 )
__meta__ = {
"_edit_group_": true
}

[node name="Spand 4" type="Area2D" parent="Spand/SkraldespandTekstilDdu"]

[node name="Spand 4" type="CollisionShape2D" parent="Spand/SkraldespandTekstilDdu/Spand 4"]
position = Vector2( -1.33337, 54.6667 )
shape = SubResource( 7 )

[node name="SkraldespandPapDdu" type="Sprite" parent="Spand"]
position = Vector2( 1074, 429 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 15 )
__meta__ = {
"_edit_group_": true
}

[node name="Spand 5" type="Area2D" parent="Spand/SkraldespandPapDdu"]

[node name="Spand 5" type="CollisionShape2D" parent="Spand/SkraldespandPapDdu/Spand 5"]
position = Vector2( -1.33325, 56 )
shape = SubResource( 8 )

[node name="Skrald" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="Skrald1" type="Panel" parent="Skrald"]
self_modulate = Color( 0.352941, 0.254902, 0.254902, 0 )
show_behind_parent = true
margin_left = 906.0
margin_top = -276.0
margin_right = 1160.0
margin_bottom = -56.0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="skrald1" type="Area2D" parent="Skrald/Skrald1"]
position = Vector2( -22, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Skrald/Skrald1/skrald1"]
position = Vector2( 139, 122 )
shape = SubResource( 9 )

[node name="BananaPeelDdu" type="Sprite" parent="Skrald/Skrald1"]
position = Vector2( 128, 112 )
texture = ExtResource( 5 )

[node name="Skrald2" type="Panel" parent="Skrald"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 187.0
margin_top = -302.0
margin_right = 282.0
margin_bottom = -16.0
script = ExtResource( 4 )
__meta__ = {
"_edit_group_": true
}

[node name="skrald2" type="Area2D" parent="Skrald/Skrald2"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Skrald/Skrald2/skrald2"]
position = Vector2( 94, 45 )
polygon = PoolVector2Array( -31, -41, -65, -44, -66, -12, -91, 35, -89, 235, -6, 232, -7, 142, -5, 16, -25, -2 )

[node name="PlasticBottleDdu" type="Sprite" parent="Skrald/Skrald2"]
position = Vector2( 52, 146 )
texture = ExtResource( 3 )

[node name="Skrald 3" type="Panel" parent="Skrald"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 505.0
margin_top = -644.0
margin_right = 769.0
margin_bottom = -368.0
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="Skrald 3" type="Area2D" parent="Skrald/Skrald 3"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Skrald/Skrald 3/Skrald 3"]
polygon = PoolVector2Array( 76, 62, 135, 48, 178, 70, 181, 97, 201, 127, 196, 158, 195, 201, 196, 233, 59, 238, 50, 198, 65, 142 )

[node name="Restaffald" type="Sprite" parent="Skrald/Skrald 3"]
position = Vector2( 131, 135 )
texture = ExtResource( 8 )

[node name="Skrald 4" type="Panel" parent="Skrald"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 1332.0
margin_top = -592.0
margin_right = 1568.0
margin_bottom = -332.0
script = ExtResource( 11 )
__meta__ = {
"_edit_group_": true
}

[node name="Skrald 4" type="Area2D" parent="Skrald/Skrald 4"]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Skrald/Skrald 4/Skrald 4"]
polygon = PoolVector2Array( 57, 36, 111, 29, 126, 69, 160, 50, 200, 75, 143, 109, 145, 210, 53, 218 )

[node name="BadShirtDdu" type="Sprite" parent="Skrald/Skrald 4"]
position = Vector2( 99, 129 )
texture = ExtResource( 12 )

[node name="Skrald 5" type="Panel" parent="Skrald"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = 1687.0
margin_top = -360.0
margin_right = 2162.0
margin_bottom = -32.0
script = ExtResource( 14 )
__meta__ = {
"_edit_group_": true
}

[node name="Skrald 5" type="Area2D" parent="Skrald/Skrald 5"]

[node name="Skrald 5" type="CollisionPolygon2D" parent="Skrald/Skrald 5/Skrald 5"]
polygon = PoolVector2Array( 42, 56, 290, 6, 325, 54, 388, 13, 464, 57, 410, 141, 412, 270, 151, 328, 72, 253, 69, 194, -2, 122 )

[node name="Skrald 6" type="Sprite" parent="Skrald/Skrald 5"]
position = Vector2( 229, 166 )
texture = ExtResource( 16 )

[node name="MinigameLokaleDdu" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 1024.98, 0.999969 )
scale = Vector2( 1.53128, 1.53111 )
texture = ExtResource( 17 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StaticBody2D"]
polygon = PoolVector2Array( -125, -667, 2190, -670, 2187, 663, 2185, 693, -140, 711, -134, -638, -172, 746, 2285, 737, 2305, -749, -261, -784 )

[node name="Spil færdig" type="ColorRect" parent="."]
visible = false
margin_left = 470.0
margin_top = -362.0
margin_right = 1560.0
margin_bottom = 311.0
color = Color( 0.168627, 0.545098, 0.156863, 1 )

[node name="TextEdit2" type="TextEdit" parent="Spil færdig"]
margin_left = 265.0
margin_top = 16.0
margin_right = 852.0
margin_bottom = 196.0
custom_fonts/font = SubResource( 10 )
text = "        Opgave 1
   Affaldssortering"

[node name="RichTextLabel" type="RichTextLabel" parent="Spil færdig"]
margin_left = 141.0
margin_top = 204.0
margin_right = 979.0
margin_bottom = 439.0
custom_fonts/normal_font = SubResource( 11 )
text = "                                         GODT Gået!!
			
 At Sortere sit affald efter de korrekte henvisninger er meget vigtigt for den grønne omstilling. Det sørger for at vi kan få genbrugt  så  meget af de værdifulde ressourcer som muligt "

[node name="Spil igen" type="Button" parent="Spil færdig"]
margin_left = 117.0
margin_top = 460.0
margin_right = 414.0
margin_bottom = 607.0
custom_fonts/font = SubResource( 12 )
text = "Spil Igen"

[node name="Videre" type="Button" parent="Spil færdig"]
margin_left = 670.0
margin_top = 460.0
margin_right = 988.0
margin_bottom = 610.0
custom_fonts/font = SubResource( 13 )
text = "Videre"

[connection signal="gui_input" from="Skrald/Skrald1" to="Skrald/Skrald1" method="_on_Skrald1_gui_input"]
[connection signal="area_shape_entered" from="Skrald/Skrald1/skrald1" to="Skrald/Skrald1" method="_on_skrald1_area_shape_entered"]
[connection signal="gui_input" from="Skrald/Skrald2" to="Skrald/Skrald2" method="_on_Skrald_2_gui_input"]
[connection signal="area_entered" from="Skrald/Skrald2/skrald2" to="Skrald/Skrald2" method="_on_skrald2_area_entered"]
[connection signal="gui_input" from="Skrald/Skrald 3" to="Skrald/Skrald 3" method="_on_Skrald_3_gui_input"]
[connection signal="area_entered" from="Skrald/Skrald 3/Skrald 3" to="Skrald/Skrald 3" method="_on_Skrald_3_area_entered"]
[connection signal="gui_input" from="Skrald/Skrald 4" to="Skrald/Skrald 4" method="_on_Skrald_4_gui_input"]
[connection signal="area_entered" from="Skrald/Skrald 4/Skrald 4" to="Skrald/Skrald 4" method="_on_Skrald_4_area_entered"]
[connection signal="gui_input" from="Skrald/Skrald 5" to="Skrald/Skrald 5" method="_on_Skrald_5_gui_input"]
[connection signal="area_entered" from="Skrald/Skrald 5/Skrald 5" to="Skrald/Skrald 5" method="_on_Skrald_5_area_entered"]
[connection signal="pressed" from="Spil færdig/Spil igen" to="." method="_on_Spil_igen_pressed"]
[connection signal="pressed" from="Spil færdig/Videre" to="." method="_on_Videre_pressed"]
